--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,42 +1,74 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:100');
+
 body {
-	background-color: black;
-	font-size: 64px;
+	font-family: "Roboto", sans-serif;
 }
 
-.container {
-	display: grid;
-	justify-content: center;
-	grid-template-columns: 80px 80px 80px 80px;
-	grid-template-rows: 80px 80px;
-	grid-template-areas: "h h h h" "m m m m" "m m m m" "m m m m" "m m m m" "m m m m";
+.calcBtn {
+	background-color: silver;
+	color: black;
+	width: 25px;
+	height: 45px;
+	border: 1px solid grey;
+	text-align: center;
+	cursor: pointer;
+	font-size: 32px;
+	font-weight: 100;
+	padding-top: 3px;
 }
 
-.header {
-	grid-area: h;
-	grid-row-start: 1;
-	grid-row-end: 1;
-	background-color: black;
-	color: white;
-	text-align: right;
-}
-
-.btn {
-  background-color: #cccccc;
-  border: none;
-  color: white;
-  padding: 20px;
-  text-align: center;
-  margin: 4px 2px;
-  border-radius: 50%;
-}
-
-.gray {
-	background-color: gray;
-}
-
-.orange {
+.calcBtn:hover {
 	background-color: orange;
 }
-button {
-  font-size: 26px;
+
+.row {
+	display: table;
+	table-layout: fixed;
+	width: 200px;
+}
+
+.column {
+	display: table-cell;
+}
+
+#calcZero {
+	width: 51.5px;
+	border-radius: 0 0 0 7px;
+}
+
+#calcClear {
+	width: 51.5px;
+}
+
+#calcDisplay {
+	height: 80px; 
+	color: white;
+	text-align: right;
+	border-left: 1px solid grey;
+	border-right: 1px solid grey;
+	border-top: 1px solid grey;
+	font-size: 48px;
+	background-color: #383838;
+	overflow: hidden;
+	white-space: nowrap;
+	padding: 12px;
+	border-radius: 7px 7px 0 0;
+}
+
+.calcOperBtn {
+	background-color: orange;
+	color: white;
+}
+
+h1 {
+	text-align: center;
+	margin-top: 50px;
+}
+
+#calcEqual {
+	border-radius: 0 0 7px 0;
+}
+
+#calcParent {
+	margin-left: calc(50% - 100px)
 }
