--- a/stylesheet.css
+++ b/stylesheet.css
@@ -70,5 +70,12 @@ h1 {
 }
 
 #calcParent {
-	margin-left: calc(50% - 100px)
+	margin-left: calc(50% - 100px);
+	-webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
 }
